Add signature pad and Supabase integration

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>利用規約 | 株式会社SMART GOLF</title>
   <link rel="stylesheet" href="index.css">
+  <!-- Supabase & Signature Pad -->
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.7/dist/signature_pad.umd.min.js"></script>
 </head>
+
 <body>
 
   <div id="sg-tos-wrapper">
@@ -15,7 +20,9 @@
       <p class="sg-subtitle">株式会社SMART GOLF</p>
 
       <div class="sg-preamble">
-        <p>本利用規約（以下「本規約」といいます。）には、本サービスの提供条件及び当社と会員の皆様との間の権利義務関係が定められています。本サービスの利用に際しては、本規約の全文をお読みいただいたうえで、本規約に同意いただく必要があります。</p>
+        <p>
+          本利用規約（以下「本規約」といいます。）には、本サービスの提供条件及び当社と会員の皆様との間の権利義務関係が定められています。本サービスの利用に際しては、本規約の全文をお読みいただいたうえで、本規約に同意いただく必要があります。
+        </p>
       </div>
 
       <h2 class="sg-article-title">第１条（適用）</h2>
@@ -40,14 +47,20 @@
 
       <h2 class="sg-article-title">第３条（登録）</h2>
       <ol class="sg-list-num">
-        <li>本サービスの利用を希望する者（以下「登録希望者」といいます。）は、本規約を遵守することに同意し、かつ当社の定める一定の情報（以下「登録事項」といいます。）を当社の定める方法で当社に提供することにより、当社に対し、本サービスの利用の登録を申請することが出来ます。</li>
-        <li>当社は、当社の基準に従って、第１項に基づいて登録申請を行った登録希望者の登録の可否を判断し、当社が登録を認める場合にはその旨を登録希望者に通知します。登録希望者の会員としての登録は、当社が本項の通知を行ったことをもって完了するものとします。</li>
+        <li>
+          本サービスの利用を希望する者（以下「登録希望者」といいます。）は、本規約を遵守することに同意し、かつ当社の定める一定の情報（以下「登録事項」といいます。）を当社の定める方法で当社に提供することにより、当社に対し、本サービスの利用の登録を申請することが出来ます。
+        </li>
+        <li>
+          当社は、当社の基準に従って、第１項に基づいて登録申請を行った登録希望者の登録の可否を判断し、当社が登録を認める場合にはその旨を登録希望者に通知します。登録希望者の会員としての登録は、当社が本項の通知を行ったことをもって完了するものとします。
+        </li>
         <li>前項に定める登録の完了時に、サービス利用契約が会員と当社の間に成立し、会員は本サービスを本規約に従い利用することが出来るようになります。</li>
         <li>当社は、登録希望者が、以下の各号のいずれかの事由に該当する場合は、登録及び再登録を拒否することがあり、またその理由について一切開示義務を負いません。
           <ol class="sg-list-kako">
             <li>当社に提供した登録事項の全部又は一部につき虚偽、誤記または記載漏れがあった場合</li>
             <li>未成年者、成年被後見人、被保佐人または被補助人のいずれかであり、法定代理人、後見人、補佐人または補助人の同意等を得ていなかった場合</li>
-            <li>反社会的勢力等（暴力団、暴力団員、右翼団体、反社会的勢力、その他これに準ずる者を意味します。以下同じ。）である、または資金提供その他を通じて反社会的勢力等の維持、運営もしくは経営に協力もしくは関与する等の反社会的勢力等との何らかの交流もしくは関与を行っていると当社が判断した場合</li>
+            <li>
+              反社会的勢力等（暴力団、暴力団員、右翼団体、反社会的勢力、その他これに準ずる者を意味します。以下同じ。）である、または資金提供その他を通じて反社会的勢力等の維持、運営もしくは経営に協力もしくは関与する等の反社会的勢力等との何らかの交流もしくは関与を行っていると当社が判断した場合
+            </li>
             <li>登録希望者が過去当社との契約に違反した者またはその関係者であると当社が判断した場合</li>
             <li>第１０条に定める措置を受けたことがある場合</li>
             <li>その他、当社が登録を適当でないと判断した場合</li>
@@ -60,7 +73,8 @@
 
       <h2 class="sg-article-title">第５条（パスワード・ユーザーID及び施錠システムの管理）</h2>
       <ol class="sg-list-num">
-        <li>会員は、自己の責任において、本サービスに関するパスワード・ユーザーID及び施錠システムを適切に管理及び保管するものとし、これを第三者に利用させ、または貸与、譲渡、名義変更、売買等をしてはならないものとします。</li>
+        <li>会員は、自己の責任において、本サービスに関するパスワード・ユーザーID及び施錠システムを適切に管理及び保管するものとし、これを第三者に利用させ、または貸与、譲渡、名義変更、売買等をしてはならないものとします。
+        </li>
         <li>パスワード・ユーザーID及び施錠システムの管理不十分、使用上の過誤、第三者の使用等によって生じた損害に関する責任は会員が負うものとし、当社は一切の責任を負いません。</li>
       </ol>
 
@@ -127,7 +141,8 @@
 
       <h2 class="sg-article-title">第１０条（登録抹消等）</h2>
       <ol class="sg-list-num">
-        <li>当社は、会員が以下の各号のいずれかの事由に該当する場合は、事前に通知または催告することなく、当該会員について本サービスの利用を一時的に停止し、または会員としての登録を抹消、もしくはサービス利用契約を解除することができます。
+        <li>
+          当社は、会員が以下の各号のいずれかの事由に該当する場合は、事前に通知または催告することなく、当該会員について本サービスの利用を一時的に停止し、または会員としての登録を抹消、もしくはサービス利用契約を解除することができます。
           <ol class="sg-list-kako">
             <li>本規約のいずれかの条項に違反した場合</li>
             <li>登録事項に虚偽の事実があることが判明した場合</li>
@@ -158,11 +173,15 @@
 
       <h2 class="sg-article-title">第１３条（退会）</h2>
       <ol class="sg-list-num">
-        <li>会員は、退会を希望する月の25日21時00分までに当社に電話にて連絡をし、かつ同日の23時59分までに退会フォームにて退会申請を送信することにより、当該月の末日に本サービスから退会し自己の会員としての登録を抹消することができます。</li>
+        <li>
+          会員は、退会を希望する月の25日21時00分までに当社に電話にて連絡をし、かつ同日の23時59分までに退会フォームにて退会申請を送信することにより、当該月の末日に本サービスから退会し自己の会員としての登録を抹消することができます。
+        </li>
         <li>前項における退会は、最低利用期間の利用料金相当額（ただし、入会月の日割分を含まない）を支払った場合にすることができます。</li>
         <li>退会にあたり、当社に対して負っている債務がある場合、会員は、当社に対して負っている債務の一切について当然に期限の利益を失い、直ちに当社に対して全ての債務の支払いを行わなければなりません。</li>
         <li>退会後の利用者情報の取扱いについては、第１７条の規定に従うものとします。</li>
-        <li>入会金割引の適用を受けた会員が所定継続期間内に退会する場合には、第２項の金額に加え、違約金として、３９，６００円（税込）を支払うものとします。なお、第１２条に定める休会期間中は、所定継続期間の進行は停止するものとします。</li>
+        <li>
+          入会金割引の適用を受けた会員が所定継続期間内に退会する場合には、第２項の金額に加え、違約金として、３９，６００円（税込）を支払うものとします。なお、第１２条に定める休会期間中は、所定継続期間の進行は停止するものとします。
+        </li>
         <li>所定継続期間満了時までに第１項に規定する退会の手続がなされない場合、同期間の満了後は従前のプランと同一の内容で自動的に更新され、以降も同様に更新されます。</li>
       </ol>
 
@@ -174,9 +193,14 @@
 
       <h2 class="sg-article-title">第１５条（保証の否認及び免責）</h2>
       <ol class="sg-list-num">
-        <li>当社は、本サービスが会員の特定の目的に適合すること、期待する機能・商品的価値・正確性・有効性を有すること、会員による本サービスの利用が会員に適用のあ る法令または業界団体の内部規則等に適合すること、及び不具合が生じないことについて、何ら保証するものではありません。</li>
-        <li>当社は、故意又は重過失による場合を除き、当社による本サービスの提供の中断、停止、終了、利用不能または変更、会員が本サービスに送信したメッセージまたは情報の削除または消失、会員の登録の抹消、本サービスの利用による登録データの消失または機器の故障もしくは損傷、その他本サービスに関して会員が被った損害（以下「ユーザー損害」といいます。）につき、賠償する責任を一切負わないものとします。</li>
-        <li>何らかの理由により当社が過失（重過失を除く。）による責任を負う場合であっても、当社は、ユーザー損害につき、過去12ヶ月間に会員が当社に支払った対価の金額を超えて賠償する責任を負わないものとし、また、付随的損害、間接的損害、特別損害、将来の損害、将来の損害及び逸失利益にかかる損害については、賠償する責任を負わないものとします。</li>
+        <li>当社は、本サービスが会員の特定の目的に適合すること、期待する機能・商品的価値・正確性・有効性を有すること、会員による本サービスの利用が会員に適用のあ
+          る法令または業界団体の内部規則等に適合すること、及び不具合が生じないことについて、何ら保証するものではありません。</li>
+        <li>
+          当社は、故意又は重過失による場合を除き、当社による本サービスの提供の中断、停止、終了、利用不能または変更、会員が本サービスに送信したメッセージまたは情報の削除または消失、会員の登録の抹消、本サービスの利用による登録データの消失または機器の故障もしくは損傷、その他本サービスに関して会員が被った損害（以下「ユーザー損害」といいます。）につき、賠償する責任を一切負わないものとします。
+        </li>
+        <li>
+          何らかの理由により当社が過失（重過失を除く。）による責任を負う場合であっても、当社は、ユーザー損害につき、過去12ヶ月間に会員が当社に支払った対価の金額を超えて賠償する責任を負わないものとし、また、付随的損害、間接的損害、特別損害、将来の損害、将来の損害及び逸失利益にかかる損害については、賠償する責任を負わないものとします。
+        </li>
         <li>本サービスまたは当社ウェブサイトに関連して会員と他の会員または第三者との間において生じた取引、連絡、紛争等については、当社は一切責任を負いません。</li>
         <li>当社は、会員のIPアドレス等は保有致しません。</li>
         <li>当社所定の駐車場内、もしくは提携駐車場内での事故及び損害に関しては当社は一切責任を負いません。</li>
@@ -192,7 +216,9 @@
       </ol>
 
       <h2 class="sg-article-title">第１８条（本規約等の変更）</h2>
-      <p>当社は、本規約を変更できるものとします。本規約を変更した場合には、会員に当該変更内容を通知するものとし、当該変更内容の通知後、会員が本サービスを利用した場合または当社の定める期間内に登録抹消手続をとらなかった場合には、会員は本規約の変更に同意したものとみなします。</p>
+      <p>
+        当社は、本規約を変更できるものとします。本規約を変更した場合には、会員に当該変更内容を通知するものとし、当該変更内容の通知後、会員が本サービスを利用した場合または当社の定める期間内に登録抹消手続をとらなかった場合には、会員は本規約の変更に同意したものとみなします。
+      </p>
 
       <h2 class="sg-article-title">第１９条（通知・連絡）</h2>
       <p>本サービスに関する問い合わせその他、会員から当社に対する連絡または通知及び本規約の変更に関する通知その他当社から会員に対する連絡または通知は、当社の定める方法で行うものとします。</p>
@@ -200,7 +226,9 @@
       <h2 class="sg-article-title">第２０条（サービス利用契約上の地位の譲渡等）</h2>
       <ol class="sg-list-num">
         <li>会員は、当社の書面により事前の承諾なく、サービス利用契約上の地位または本規約に基づく権利もしくは義務につき、第三者に対し、譲渡、移転、担保設定、その他の処分をすることはできません。</li>
-        <li>当社は、本サービスにかかる事業を他社に譲渡した場合には、当該事業譲渡に伴い、サービス利用契約上の地位、本規約に基づく権利及び義務並びに会員の登録事項、その他の顧客情報を当該事業譲渡の譲受人に譲渡することができるものとし、会員は、かかる譲渡につき本項において予め同意したものとします。なお、本項に定める事業譲渡には、通常の事業譲渡のみならず、会社分割その他の事業が移転するあらゆる場合を含むものとします。</li>
+        <li>
+          当社は、本サービスにかかる事業を他社に譲渡した場合には、当該事業譲渡に伴い、サービス利用契約上の地位、本規約に基づく権利及び義務並びに会員の登録事項、その他の顧客情報を当該事業譲渡の譲受人に譲渡することができるものとし、会員は、かかる譲渡につき本項において予め同意したものとします。なお、本項に定める事業譲渡には、通常の事業譲渡のみならず、会社分割その他の事業が移転するあらゆる場合を含むものとします。
+        </li>
       </ol>
 
       <h2 class="sg-article-title">第２１条（損害賠償請求）</h2>
@@ -208,7 +236,9 @@
 
       <h2 class="sg-article-title">第２２条（本サービスのサポート）</h2>
       <ol class="sg-list-num">
-        <li>当社は、会員に対し、メール（support@gjb.co.jp）にて本サービスのサポートを実施していますが、問い合わせ等に対する返信は3営業日以内を基準としています。よって、登録希望者は、登録申請をした時点をもって、その問い合わせの返信期間に同意したものとします。</li>
+        <li>
+          当社は、会員に対し、メール（support@gjb.co.jp）にて本サービスのサポートを実施していますが、問い合わせ等に対する返信は3営業日以内を基準としています。よって、登録希望者は、登録申請をした時点をもって、その問い合わせの返信期間に同意したものとします。
+        </li>
         <li>上記サポートは、事前に会員に通知することなく終了することがあります。</li>
       </ol>
 
@@ -222,7 +252,9 @@
       </ol>
 
       <h2 class="sg-article-title">第２４条（分離可能性）</h2>
-      <p>本規約のいずれかの条項、またはその一部が、消費者契約法その他の法令等により、無効又は執行不能と判断された場合であっても、本規約の残り規定及び一部が無効又は執行不能と判断された規定の残りの部分は、継続して、完全に効力を有するものとします。</p>
+      <p>
+        本規約のいずれかの条項、またはその一部が、消費者契約法その他の法令等により、無効又は執行不能と判断された場合であっても、本規約の残り規定及び一部が無効又は執行不能と判断された規定の残りの部分は、継続して、完全に効力を有するものとします。
+      </p>
 
       <h2 class="sg-article-title">第２５条（準拠法及び管轄裁判所）</h2>
       <ol class="sg-list-num">
@@ -238,6 +270,22 @@
       </div>
     </div>
 
+
+    <!-- ▼▼▼ 署名エリア ▼▼▼ -->
+    <div class="sg-signature-section">
+      <h3 class="sg-section-header">署名</h3>
+      <p class="sg-description">下記枠内に指またはタッチペンでご署名ください。</p>
+
+      <div class="sg-signature-wrapper">
+        <canvas id="sg-signature-pad" width="600" height="200"></canvas>
+      </div>
+
+      <div class="sg-clear-btn-wrapper">
+        <button type="button" id="sg-clear-signature">署名をクリア</button>
+      </div>
+    </div>
+    <!-- ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲ -->
+
     <div class="sg-action-area">
       <div class="sg-checkbox-wrapper">
         <label for="sg-agree-check" class="sg-checkbox-label">
@@ -245,7 +293,7 @@
           <span>利用規約に同意しました</span>
         </label>
       </div>
-      
+
       <div class="sg-button-wrapper">
         <button id="sg-submit-btn" class="sg-submit-button" disabled>同意して送信する</button>
       </div>
@@ -256,4 +304,5 @@
   <script src="index.js"></script>
 
 </body>
+
 </html>
